--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -128,7 +128,7 @@ jobs:
         architecture: [x64]
         distribution: [adopt, adopt-openj9, temurin]
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [11, 16, 17, 18-ea, 19-ea]
+        java: [11, 16, 17, 18-ea]
         exclude:
           - distribution: adopt-openj9
             java: 18-ea
@@ -165,10 +165,10 @@ jobs:
     if: github.event_name == 'push' && endsWith(github.event.head_commit.message, 'Releasing new version')
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 15
+      - name: Set up JDK 17
         uses: actions/setup-java@v2.5.0
         with:
-          java-version: 15
+          java-version: 17
           distribution: 'zulu'
           server-id: ossrh
           server-username: MAVEN_USERNAME
