--- a/java/src/main/resources/jvm-driver.properties
+++ b/java/src/main/resources/jvm-driver.properties
@@ -7,7 +7,7 @@
 #  
 #  The MIT License (MIT)
 #  
-#  Copyright (c) 2019-2021-2022 Luke Hutchison, Roberto Gentili
+#  Copyright (c) 2021-2022 Luke Hutchison, Roberto Gentili
 #  
 #  Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
 #  documentation files (the "Software"), to deal in the Software without restriction, including without
