--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -52,7 +52,7 @@ jobs:
       matrix:
         architecture: [x64]
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [17]
+        java: [18]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -88,7 +88,7 @@ jobs:
         architecture: [x86, x64]
         distribution: [liberica, zulu]
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [9, 10, 11, 12, 13, 14, 15, 16, 17, 18-ea, 19-ea]
+        java: [9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19-ea]
         exclude:
           - os: macOS-latest
             architecture: x86
@@ -97,7 +97,7 @@ jobs:
           - distribution: liberica
             java: 10
           - distribution: liberica
-            java: 18-ea
+            java: 18
           - distribution: liberica
             java: 19-ea
     runs-on: ${{ matrix.os }}
@@ -128,18 +128,14 @@ jobs:
         architecture: [x64]
         distribution: [adopt, adopt-openj9, temurin]
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [11, 16, 17, 18-ea, 19-ea]
+        java: [11, 16, 17, 18-ea]
         exclude:
           - distribution: adopt-openj9
             java: 18-ea
-          - distribution: adopt-openj9
-            java: 19-ea
           - distribution: adopt
             java: 17
           - distribution: adopt
             java: 18-ea
-          - distribution: adopt
-            java: 19-ea
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -165,10 +161,10 @@ jobs:
     if: github.event_name == 'push' && endsWith(github.event.head_commit.message, 'Releasing new version')
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 17
+      - name: Set up JDK 18
         uses: actions/setup-java@v3
         with:
-          java-version: 17
+          java-version: 18
           distribution: 'zulu'
           server-id: ossrh
           server-username: MAVEN_USERNAME
