Releasing new version

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -36,7 +36,7 @@
 	</parent>
 
 	<artifactId>jvm-driver</artifactId>
-	<version>9.1.2-SNAPSHOT</version>
+	<version>9.2.0-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 
@@ -179,8 +179,8 @@
 									file="${project.basedir}/../java-hook/bin/jdk/internal/loader/ClassLoaderDelegateForJDK9.class"
 									tofile="${project.build.directory}/classes/io/github/toolfactory/jvm/util/ClassLoaderDelegateForJDK9.bwc" />
 								<copy
-									file="${project.basedir}/../java-hook/bin/io/github/toolfactory/jvm/function/catalog/ThrowExceptionFunctionForJava7.class"
-									tofile="${project.build.directory}/classes/io/github/toolfactory/jvm/function/catalog/ThrowExceptionFunctionForJava7.class" />
+									file="${project.basedir}/../java-hook/bin/io/github/toolfactory/jvm/function/catalog/ThrowExceptionFunction$ForJava7.class"
+									tofile="${project.build.directory}/classes/io/github/toolfactory/jvm/function/catalog/ThrowExceptionFunction$ForJava7.class" />
 							</target>
 						</configuration>
 					</execution>
@@ -213,9 +213,6 @@
 						<configuration>
 							<!-- compile everything to ensure module-info contains right entries -->
 							<release>9</release>
-							<excludes>
-								<exclude>io/github/toolfactory/jvm/function/catalog/ThrowExceptionFunctionForJava7.java</exclude>
-							</excludes>
 						</configuration>
 					</execution>
 					<execution>
@@ -236,7 +233,6 @@
 						<!-- recompile everything for target VM except the module-info.java -->
 						<configuration>
 							<excludes>
-								<exclude>io/github/toolfactory/jvm/function/catalog/ThrowExceptionFunctionForJava7.java</exclude>
 								<exclude>module-info.java</exclude>
 							</excludes>
 							<source>${project_jdk_version}</source>
