--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -88,7 +88,7 @@ jobs:
         architecture: [x86, x64]
         distribution: [liberica, zulu]
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
+        java: [9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20-ea]
         exclude:
           - os: macOS-latest
             architecture: x86
@@ -100,6 +100,8 @@ jobs:
             java: 18
           - distribution: liberica
             java: 19
+          - distribution: liberica
+            java: 20-ea
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
