Releasing new version

--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -98,10 +98,6 @@ jobs:
             java: 10
           - distribution: liberica
             java: 18
-          - distribution: liberica
-            java: 19
-          - distribution: liberica
-            java: 20-ea
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -130,14 +126,18 @@ jobs:
         architecture: [x64]
         distribution: [adopt, adopt-openj9, temurin]
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [11, 16, 17, 18]
+        java: [11, 16, 17, 18, 19]
         exclude:
           - distribution: adopt-openj9
             java: 18
+          - distribution: adopt-openj9
+            java: 19
           - distribution: adopt
             java: 17
           - distribution: adopt
             java: 18
+          - distribution: adopt
+            java: 19
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
