--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -126,6 +126,9 @@ jobs:
         distribution: [zulu]
         os: [ubuntu-latest, macOS-latest, windows-latest]
         java: [20-ea]
+        exclude:
+          - os: macOS-latest
+            architecture: x86        
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
