--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -92,6 +92,10 @@ jobs:
         exclude:
           - os: macOS-latest
             architecture: x86
+            distribution: zulu
+          - os: ubuntu-latest
+            architecture: x86
+            distribution: zulu
           - distribution: liberica
             java: 9
           - distribution: liberica
