--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -90,9 +90,8 @@ jobs:
         os: [ubuntu-latest, macOS-latest, windows-latest]
         java: [9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
         exclude:
-          - os: ubuntu-latest
+          - os: macOS-latest
             architecture: x86
-            distribution: zulu
           - distribution: liberica
             java: 9
           - distribution: liberica
