Releasing new version

--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -92,10 +92,13 @@ jobs:
         exclude:
           - os: macOS-latest
             architecture: x86
-          - os: ubuntu-latest
-            architecture: x86
+          - architecture: x86
             distribution: zulu
             java: 19
+          - os: ubuntu-latest
+            architecture: x64
+            distribution: zulu
+            java: 10
           - distribution: liberica
             java: 9
           - distribution: liberica
