--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -92,13 +92,16 @@ jobs:
         exclude:
           - os: macOS-latest
             architecture: x86
-          - architecture: x86
-            distribution: zulu
+          - os: ubuntu-latest
+            architecture: x86
             java: 19
           - os: ubuntu-latest
             architecture: x64
             distribution: zulu
             java: 10
+          - os: windows-latest
+            architecture: x86
+            java: 19
           - distribution: liberica
             java: 9
           - distribution: liberica
