--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -135,7 +135,7 @@ jobs:
         architecture: [x86, x64]
         distribution: [zulu]
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [20-ea]
+        java: [20, 21]
         exclude:
           - os: macOS-latest
             architecture: x86        
@@ -205,10 +205,10 @@ jobs:
     if: github.event_name == 'push' && endsWith(github.event.head_commit.message, 'Releasing new version')
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 19
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: 19
+          java-version: 21
           distribution: 'zulu'
           server-id: ossrh
           server-username: MAVEN_USERNAME
