Releasing new version

--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -81,7 +81,7 @@ jobs:
           
   build-and-test-with-zulu-JDK:
     name: ${{ matrix.os }} ${{ matrix.architecture }}, JVM ${{ matrix.distribution }} ${{ matrix.java }}
-#    needs: [elaborate-java-hook-module]
+    needs: [elaborate-java-hook-module]
     strategy:
       fail-fast: false
       max-parallel: 15
@@ -123,7 +123,7 @@ jobs:
    
   build-and-test-with-liberica-JDK:
     name: ${{ matrix.os }} ${{ matrix.architecture }}, JVM ${{ matrix.distribution }} ${{ matrix.java }}
-#    needs: [elaborate-java-hook-module]
+    needs: [elaborate-java-hook-module]
     strategy:
       fail-fast: false
       max-parallel: 15
@@ -167,7 +167,7 @@ jobs:
 
   build-and-test-with-adopt-JDK:
     name: ${{ matrix.os }} ${{ matrix.architecture }}, JVM ${{ matrix.distribution }} ${{ matrix.java }}
-#    needs: [elaborate-java-hook-module]
+    needs: [elaborate-java-hook-module]
     strategy:
       fail-fast: false
       max-parallel: 15
@@ -200,7 +200,7 @@ jobs:
   
   build-and-test-with-adopt-openj9-JDK:
     name: ${{ matrix.os }} ${{ matrix.architecture }}, JVM ${{ matrix.distribution }} ${{ matrix.java }}
-#    needs: [elaborate-java-hook-module]
+    needs: [elaborate-java-hook-module]
     strategy:
       fail-fast: false
       max-parallel: 15
@@ -233,7 +233,7 @@ jobs:
   
   build-and-test-with-temurin-JDK:
     name: ${{ matrix.os }} ${{ matrix.architecture }}, JVM ${{ matrix.distribution }} ${{ matrix.java }}
-#    needs: [elaborate-java-hook-module]
+    needs: [elaborate-java-hook-module]
     strategy:
       fail-fast: false
       max-parallel: 15
@@ -265,8 +265,9 @@ jobs:
    
    
   build-and-test-with-ea-JDK:
+    if: ${{ false }}
     name: ${{ matrix.os }} ${{ matrix.architecture }}, JVM ${{ matrix.distribution }} ${{ matrix.java }}
-#    needs: [elaborate-java-hook-module]
+    needs: [elaborate-java-hook-module]
     strategy:
       fail-fast: false
       max-parallel: 15
